# tinker-cookbook

./: .gitignore  .sync_state  AGENTS.md  README.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: claude-review.yml  pyright.yaml
tinker_cookbook/: checkpoint_utils.py  completers.py  hyperparam_utils.py  model_info.py  renderers.py  tokenizer_utils.py
tinker_cookbook/chat_app/: tinker_chat_cli.py
tinker_cookbook/distillation/: datasets.py  train_extrapolate.py  train_on_policy.py
tinker_cookbook/example_data/: conversations.jsonl  multilingual.txt
tinker_cookbook/preference/: train_dpo.py
tinker_cookbook/recipes/: README.md  rl_basic.py  rl_loop.py  sl_basic.py  sl_loop.py
tinker_cookbook/recipes/chat_sl/: README.md  train.py
tinker_cookbook/recipes/code_rl/: README.md  code_env.py  code_grading.py  lcb_utils.py  train.py
tinker_cookbook/recipes/code_rl/sandbox_config/: local.yaml
tinker_cookbook/recipes/distillation/: README.md  evals.py  extrapolate_distillation.py  off_policy_reasoning.py  on_policy_distillation.py  on_policy_multi_teacher.py
tinker_cookbook/recipes/math_rl/: README.md  arithmetic_env.py  math_env.py  math_grading.py  train.py
tinker_cookbook/recipes/multiplayer_rl/guess_number/: env.py  train.py
tinker_cookbook/recipes/multiplayer_rl/text_arena/: env.py  train.py
tinker_cookbook/recipes/multiplayer_rl/twenty_questions/: README.md  env.py  train.py
tinker_cookbook/recipes/preference/: README.md  datasets.py
tinker_cookbook/recipes/preference/dpo/: train.py
tinker_cookbook/recipes/preference/rlhf/: rlhf_pipeline.py
tinker_cookbook/recipes/preference/shorter/: train.py
tinker_cookbook/recipes/prompt_distillation/: create_data.py  train.py
tinker_cookbook/recipes/think_rm/: env.py  evals.py  parsing.py  train.py
tinker_cookbook/recipes/tool_use/search/: embedding.py  search_env.py  tools.py
tinker_cookbook/recipes/verifiers_rl/: README.md  evaluate.py  tinker_openai.py  train.py  verifiers_env.py
tinker_cookbook/rl/: metric_util.py  metrics.py  play_w_env.py  preference_envs.py  problem_env.py  rollouts.py  train.py  types.py
tinker_cookbook/supervised/: data.py  nll_evaluator.py  train.py  viz_sft_dataset.py
tinker_cookbook/tests/: smoke_tests.py  test_logtree.py  test_renderers.py  test_resume.py  test_rl_datasets.py  test_trace.py  test_utils.py  validate_temperature_logprobs.py
tinker_cookbook/utils/: logtree.py  logtree_formatters.py  ml_log.py  trace.py
tinker_cookbook/xmux/: README.md  __init__.py  control.py  core.py  run_job.py  utils.py
tinker_cookbook/xmux/examples/: async_rl_sweep.py  fake_train.py  ml_sweep.py
